--- a/mi-boda/index.html
+++ b/mi-boda/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <img src="images/LogoBoda.PNG" alt="LogoBoda" id="logo">
         <h1>Save The Date</h1>
         <nav>
             <ul>
@@ -21,7 +22,7 @@
 
     <main>
         <h2>Clara la mas lista y Adrian el mas guapo </h2>
-        <p> <strong> 11 de Abril de 2026 </strong>.</p>
+        <p> <strong> 11 de Abril de 2026 </strong></p>
         <p> <span id="contador"></span> </p>
     </main>
 
