--- a/mi-boda/localizacion.html
+++ b/mi-boda/localizacion.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <img src="images/LogoBoda.PNG" alt="LogoBoda" id="logo">
         <h1>Localización</h1>
         <nav>
             <ul>
@@ -21,9 +22,17 @@
 
     <main>
         <h2>Lugar del Evento</h2>
-        <p>La boda se celebrará en <strong>[nombre del lugar]</strong>.</p>
-        <p>Dirección: <strong>[dirección aquí]</strong></p>
-        <iframe src="https://www.google.com/maps/embed?..."></iframe>
+        <p>La boda se celebrará en la <strong><div> Finca Etxemendi de Araceli></div></strong></p>
+        <p> <strong> Dirección: <strong> <storng> Ctra. de Colmenar, km 4.200, 28750 San Agustín del Guadalix, Madrid</strong></p>
+        <iframe 
+            src="https://www.google.es/maps/place/Finca+Etxemendi+de+Araceli/@40.6823614,-3.6519351,17z/data=!4m6!3m5!1s0xd43d13939a3a263:0x80ef9f6ccfb60461!8m2!3d40.6822579!4d-3.6478803!16s%2Fg%2F11c3k573kb!5m1!1e1?hl=es&entry=ttu&g_ep=EgoyMDI1MDIwNS4xIKXMDSoJLDEwMjExMjM0SAFQAw%3D%3D"
+            width="600"
+            height="450"
+            style="border:0;"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
     </main>
 </body>
 </html>
