--- a/mi-boda/sitios.html
+++ b/mi-boda/sitios.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header>
-        <h1>Localización</h1>
+        <img src="images/LogoBoda.PNG" alt="LogoBoda" id="logo">
+        <h1>Información de Interés</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
